# live_server

./: .gitignore  Cargo.toml  README.md  config.example.toml  diesel.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
src/: config.rs  database.rs  main.rs  srs_callback.rs
src/models/: mod.rs  room.rs  schema.rs
src/routes/: live.rs  mod.rs
