[package]
name = "live_server"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = "0.8.4"
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "sqlite"] }
futures = "0.3.31"
reqwest = { version = "0.12.20", default-features = false, features = ["charset", "http2", "rustls-tls"] }
rustls = { version = "0.23.28", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.13.0", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
