[package]
name = "live_server"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
diesel = { version = "2.2.10", features = ["r2d2", "sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
futures = "0.3.31"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.20", default-features = false, features = ["charset", "http2", "rustls-tls"] }
rustls = { version = "0.23.28", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.13.0", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing", "chrono", "json", "env-filter"] }
